[package]
name = "chain_kv_full"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10.9"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
hex = "0.4.3"
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
ed25519-dalek = { version = "2.2.0", features = ["std", "rand_core"] }
rand = "0.9.2"
rand_core = { version = "0.6", features = ["getrandom"] }

# RPC server
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }