[package]
name = "ledgerdb"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server and async runtime
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
futures-util = "0.3"

# Serialization and JSON
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

# Cryptography
sha2 = "0.10"
hex = "0.4.3"
bs58 = "0.5.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.9.2"
num_cpus = "1.16"

# Persistence
sled = "0.34.7"
bincode = "1.3"

# Logging and error handling
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.99"
thiserror = "2.0.16"

[dev-dependencies]
axum-test = "15.0"
tempfile = "3.0"
